#ifndef GAME_DIRECTION_HPP_
#define GAME_DIRECTION_HPP_


enum class Direction {
  kUp,
  kDown,
  kLeft,
  kRight
};

#endif