#ifndef GAME_ENTITYTYPE_HPP_
#define GAME_ENTITYTYPE_HPP_


enum class EntityType {
  kEmpty,
  kPlayer,
  kEnemy,
  kBuilding,
  kTower
};

#endif
