#ifndef GAME_COMBATMODE_HPP_
#define GAME_COMBATMODE_HPP_

enum class CombatMode { 
    kMelee,
    kRanged
};

#endif