#ifndef GAME_CELLTYPE_HPP_
#define GAME_CELLTYPE_HPP_


enum class FieldCellType { 
    kNormal,
    kImpassable,
    kSlowdown,
    kTrap
};

#endif